Finish porting Facet.Encoding

--- a/src/contrib/Facet/Contrib.Facet.csproj
+++ b/src/contrib/Facet/Contrib.Facet.csproj
@@ -54,13 +54,26 @@
     <Compile Include="Complements\ComplementCountingAggregator.cs" />
     <Compile Include="Complements\TotalFacetCounts.cs" />
     <Compile Include="Complements\TotalFacetCountsCache.cs" />
+    <Compile Include="Encoding\ChunksIntEncoder.cs" />
+    <Compile Include="Encoding\DGapIntDecoder.cs" />
+    <Compile Include="Encoding\DGapIntEncoder.cs" />
     <Compile Include="Encoding\DGapVInt8IntDecoder.cs" />
     <Compile Include="Encoding\DGapVInt8IntEncoder.cs" />
+    <Compile Include="Encoding\EightFlagsIntDecoder.cs" />
+    <Compile Include="Encoding\EightFlagsIntEncoder.cs" />
+    <Compile Include="Encoding\FourFlagsIntDecoder.cs" />
+    <Compile Include="Encoding\FourFlagsIntEncoder.cs" />
     <Compile Include="Encoding\IntDecoder.cs" />
     <Compile Include="Encoding\IntEncoder.cs" />
     <Compile Include="Encoding\IntEncoderFilter.cs" />
+    <Compile Include="Encoding\NOnesIntDecoder.cs" />
+    <Compile Include="Encoding\NOnesIntEncoder.cs" />
+    <Compile Include="Encoding\SimpleIntDecoder.cs" />
+    <Compile Include="Encoding\SimpleIntEncoder.cs" />
     <Compile Include="Encoding\SortingIntEncoder.cs" />
     <Compile Include="Encoding\UniqueValuesIntEncoder.cs" />
+    <Compile Include="Encoding\VInt8IntDecoder.cs" />
+    <Compile Include="Encoding\VInt8IntEncoder.cs" />
     <Compile Include="Params\CategoryListParams.cs" />
     <Compile Include="Params\FacetIndexingParams.cs" />
     <Compile Include="Params\FacetSearchParams.cs" />
