Port Facet.Sampling

--- a/src/contrib/Facet/Contrib.Facet.csproj
+++ b/src/contrib/Facet/Contrib.Facet.csproj
@@ -86,11 +86,20 @@
     <Compile Include="Partitions\IIntermediateFacetResult.cs" />
     <Compile Include="Partitions\PartitionsFacetResultsHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sampling\ISampleFixer.cs" />
+    <Compile Include="Sampling\RandomSampler.cs" />
+    <Compile Include="Sampling\RepeatableSampler.cs" />
+    <Compile Include="Sampling\Sampler.cs" />
+    <Compile Include="Sampling\SamplingAccumulator.cs" />
+    <Compile Include="Sampling\SamplingParams.cs" />
+    <Compile Include="Sampling\SamplingWrapper.cs" />
+    <Compile Include="Sampling\TakmiSampleFixer.cs" />
     <Compile Include="Search\CountFacetRequest.cs" />
     <Compile Include="Search\CountingAggregator.cs" />
     <Compile Include="Search\CountingFacetsAggregator.cs" />
     <Compile Include="Search\DepthOneFacetResultsHandler.cs" />
     <Compile Include="Search\DocValuesCategoryListIterator.cs" />
+    <Compile Include="Search\DrillDownQuery.cs" />
     <Compile Include="Search\FacetArrays.cs" />
     <Compile Include="Search\FacetRequest.cs" />
     <Compile Include="Search\FacetResult.cs" />
