Finish porting Facet.Search

--- a/src/contrib/Facet/Contrib.Facet.csproj
+++ b/src/contrib/Facet/Contrib.Facet.csproj
@@ -106,12 +106,18 @@
     <Compile Include="Sampling\SamplingParams.cs" />
     <Compile Include="Sampling\SamplingWrapper.cs" />
     <Compile Include="Sampling\TakmiSampleFixer.cs" />
+    <Compile Include="Search\AdaptiveFacetsAccumulator.cs" />
+    <Compile Include="Search\ArraysPool.cs" />
+    <Compile Include="Search\CachedOrdsCountingFacetsAggregator.cs" />
     <Compile Include="Search\CountFacetRequest.cs" />
     <Compile Include="Search\CountingAggregator.cs" />
     <Compile Include="Search\CountingFacetsAggregator.cs" />
     <Compile Include="Search\DepthOneFacetResultsHandler.cs" />
     <Compile Include="Search\DocValuesCategoryListIterator.cs" />
     <Compile Include="Search\DrillDownQuery.cs" />
+    <Compile Include="Search\DrillSideways.cs" />
+    <Compile Include="Search\DrillSidewaysQuery.cs" />
+    <Compile Include="Search\DrillSidewaysScorer.cs" />
     <Compile Include="Search\FacetArrays.cs" />
     <Compile Include="Search\FacetRequest.cs" />
     <Compile Include="Search\FacetResult.cs" />
@@ -130,7 +136,14 @@
     <Compile Include="Search\IScoredDocIDs.cs" />
     <Compile Include="Search\IScoredDocIDsIterator.cs" />
     <Compile Include="Search\MatchingDocsAsScoredDocIDs.cs" />
+    <Compile Include="Search\OrdinalsCache.cs" />
+    <Compile Include="Search\PerCategoryListAggregator.cs" />
+    <Compile Include="Search\ReusingFacetArrays.cs" />
+    <Compile Include="Search\ScoringAggregator.cs" />
+    <Compile Include="Search\SearcherTaxonomyManager.cs" />
     <Compile Include="Search\StandardFacetsAccumulator.cs" />
+    <Compile Include="Search\SumScoreFacetRequest.cs" />
+    <Compile Include="Search\SumScoreFacetsAggregator.cs" />
     <Compile Include="Search\TopKFacetResultsHandler.cs" />
     <Compile Include="Search\TopKInEachNodeHandler.cs" />
     <Compile Include="SortedSet\SortedSetDocValuesAccumulator.cs" />
