--- a/src/contrib/Sandbox/Contrib.Sandbox.csproj
+++ b/src/contrib/Sandbox/Contrib.Sandbox.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Lucene.Net.Sandbox</RootNamespace>
-    <AssemblyName>Contrib.Sandbox</AssemblyName>
+    <AssemblyName>Lucene.Net.Contrib.Sandbox</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
