--- a/src/contrib/Spatial/Contrib.Spatial.csproj
+++ b/src/contrib/Spatial/Contrib.Spatial.csproj
@@ -123,16 +123,13 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BBox\AreaSimilarity.cs" />
-    <Compile Include="BBox\BBoxSimilarity.cs" />
-    <Compile Include="BBox\BBoxSimilarityValueSource.cs" />
-    <Compile Include="BBox\BBoxStrategy.cs" />
-    <Compile Include="BBox\DistanceSimilarity.cs" />
+    <Compile Include="DisjointSpatialFilter.cs" />
     <Compile Include="Prefix\PointPrefixTreeFieldCacheProvider.cs" />
     <Compile Include="Prefix\PrefixTreeStrategy.cs" />
     <Compile Include="Prefix\RecursivePrefixTreeFilter.cs" />
     <Compile Include="Prefix\RecursivePrefixTreeStrategy.cs" />
     <Compile Include="Prefix\TermQueryPrefixTreeStrategy.cs" />
+    <Compile Include="Prefix\AbstractPrefixTreeFilter.cs" />
     <Compile Include="Prefix\Tree\GeohashPrefixTree.cs" />
     <Compile Include="Prefix\Tree\Node.cs" />
     <Compile Include="Prefix\Tree\QuadPrefixTree.cs" />
@@ -163,6 +160,10 @@
     <ProjectReference Include="..\..\core\Lucene.Net.csproj">
       <Project>{5D4AD9BE-1FFB-41AB-9943-25737971BF57}</Project>
       <Name>Lucene.Net</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Queries\Contrib.Queries.csproj">
+      <Project>{481CF6E3-52AF-4621-9DEB-022122079AF6}</Project>
+      <Name>Contrib.Queries</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
