--- a/test/core/Lucene.Net.Test.csproj
+++ b/test/core/Lucene.Net.Test.csproj
@@ -200,391 +200,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Analysis\Tokenattributes\TestSimpleAttributeImpls.cs" />
-    <Compile Include="Analysis\Tokenattributes\TestTermAttributeImpl.cs" />
-    <Compile Include="Analysis\TestCachingTokenFilter.cs" />
-    <Compile Include="Analysis\TestCharArraySet.cs" />
-    <Compile Include="Analysis\TestCharFilter.cs" />
-    <Compile Include="Analysis\TestISOLatin1AccentFilter.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Analysis\TestKeywordAnalyzer.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Analysis\TestLengthFilter.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Analysis\TestMappingCharFilter.cs" />
-    <Compile Include="Analysis\TestNumericTokenStream.cs" />
-    <Compile Include="Analysis\TestPerFieldAnalzyerWrapper.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Analysis\TestStandardAnalyzer.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Analysis\TestStopAnalyzer.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Analysis\TestStopFilter.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Analysis\TestTeeSinkTokenFilter.cs" />
-    <Compile Include="Analysis\TestToken.cs" />
     <Compile Include="AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Document\TestBinaryDocument.cs" />
     <Compile Include="Document\TestDateTools.cs" />
-    <Compile Include="Document\TestDocument.cs" />
-    <Compile Include="Document\TestNumberTools.cs" />
-    <Compile Include="Index\DocHelper.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\MockIndexInput.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestAddIndexesNoOptimize.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestAtomicUpdate.cs" />
-    <Compile Include="Index\TestBackwardsCompatibility.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestByteSlices.cs" />
-    <Compile Include="Index\TestCheckIndex.cs" />
-    <Compile Include="Index\TestCompoundFile.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestConcurrentMergeScheduler.cs" />
-    <Compile Include="Index\TestCrash.cs" />
-    <Compile Include="Index\TestDeletionPolicy.cs" />
-    <Compile Include="Index\TestDirectoryReader.cs" />
-    <Compile Include="Index\TestDoc.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestDocumentWriter.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestFieldInfos.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestFieldsReader.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestFilterIndexReader.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestIndexCommit.cs" />
-    <Compile Include="Index\TestIndexFileDeleter.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestIndexInput.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestIndexReader.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestIndexReaderClone.cs" />
-    <Compile Include="Index\TestIndexReaderCloneNorms.cs" />
-    <Compile Include="Index\TestIndexReaderReopen.cs" />
-    <Compile Include="Index\TestIndexWriter.cs" />
-    <Compile Include="Index\TestSnapshotDeletionPolicy.cs" />
-    <Compile Include="Index\TestIsCurrent.cs" />
-    <Compile Include="Index\TestNewestSegment.cs" />
-    <Compile Include="Index\TestRollback.cs" />
-    <Compile Include="Index\TestIndexWriterDelete.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestIndexWriterExceptions.cs" />
-    <Compile Include="Index\TestIndexWriterLockRelease.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestIndexWriterMergePolicy.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestIndexWriterMerging.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestIndexWriterReader.cs" />
-    <Compile Include="Index\TestLazyBug.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestLazyProxSkipping.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestMultiLevelSkipList.cs" />
-    <Compile Include="Index\TestMultiReader.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestNorms.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestNRTReaderWithThreads.cs" />
-    <Compile Include="Index\TestOmitTf.cs" />
-    <Compile Include="Index\TestParallelReader.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestParallelTermEnum.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestPayloads.cs" />
-    <Compile Include="Index\TestPositionBasedTermVectorMapper.cs" />
-    <Compile Include="Index\TestSegmentMerger.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestSegmentReader.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestSegmentTermDocs.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestSegmentTermEnum.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestStressIndexing.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestStressIndexing2.cs" />
-    <Compile Include="Index\TestTerm.cs" />
-    <Compile Include="Index\TestTermdocPerf.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestTermVectorsReader.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Index\TestThreadedOptimize.cs" />
-    <Compile Include="Index\TestTransactionRollback.cs" />
-    <Compile Include="Index\TestTransactions.cs" />
-    <Compile Include="Index\TestWordlistLoader.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Messages\MessagesTestBundle.cs" />
-    <Compile Include="Messages\TestNLS.cs" />
-    <Compile Include="QueryParser\TestMultiAnalyzer.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="QueryParser\TestMultiFieldQueryParser.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="QueryParser\TestQueryParser.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Search\BaseTestRangeFilter.cs" />
-    <Compile Include="Search\CachingWrapperFilterHelper.cs" />
-    <Compile Include="Search\CheckHits.cs" />
-    <Compile Include="Search\Function\FunctionTestSetup.cs" />
-    <Compile Include="Search\Function\JustCompileSearchSpans.cs" />
-    <Compile Include="Search\Function\TestCustomScoreQuery.cs" />
-    <Compile Include="Search\Function\TestDocValues.cs" />
-    <Compile Include="Search\Function\TestFieldScoreQuery.cs" />
-    <Compile Include="Search\Function\TestOrdValues.cs" />
-    <Compile Include="Search\JustCompileSearch.cs" />
-    <Compile Include="Search\MockFilter.cs" />
-    <Compile Include="Search\Payloads\PayloadHelper.cs" />
-    <Compile Include="Search\Payloads\TestPayloadNearQuery.cs" />
-    <Compile Include="Search\Payloads\TestPayloadTermQuery.cs" />
-    <Compile Include="Search\QueryUtils.cs" />
-    <Compile Include="Search\SingleDocTestFilter.cs" />
-    <Compile Include="Search\Spans\JustCompileSearchSpans.cs" />
-    <Compile Include="Search\Spans\TestBasics.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Search\Spans\TestFieldMaskingSpanQuery.cs" />
-    <Compile Include="Search\Spans\TestNearSpansOrdered.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Search\Spans\TestPayloadSpans.cs" />
-    <Compile Include="Search\Spans\TestSpanExplanations.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Search\Spans\TestSpanExplanationsOfNonMatches.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Search\Spans\TestSpans.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Search\Spans\TestSpansAdvanced.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Search\Spans\TestSpansAdvanced2.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Search\TestBoolean2.cs" />
-    <Compile Include="Search\TestBooleanMinShouldMatch.cs" />
-    <Compile Include="Search\TestBooleanOr.cs" />
-    <Compile Include="Search\TestBooleanPrefixQuery.cs" />
-    <Compile Include="Search\TestBooleanQuery.cs" />
-    <Compile Include="Search\TestBooleanScorer.cs" />
-    <Compile Include="Search\TestCachingSpanFilter.cs" />
-    <Compile Include="Search\TestCachingWrapperFilter.cs" />
-    <Compile Include="Search\TestComplexExplanations.cs" />
-    <Compile Include="Search\TestComplexExplanationsOfNonMatches.cs" />
-    <Compile Include="Search\TestCustomSearcherSort.cs" />
-    <Compile Include="Search\TestDateFilter.cs" />
-    <Compile Include="Search\TestDateSort.cs" />
-    <Compile Include="Search\TestDisjunctionMaxQuery.cs" />
-    <Compile Include="Search\TestDocBoost.cs" />
-    <Compile Include="Search\TestDocIdSet.cs" />
-    <Compile Include="Search\TestElevationComparator.cs" />
-    <Compile Include="Search\TestExplanations.cs" />
-    <Compile Include="Search\TestFieldCache.cs" />
-    <Compile Include="Search\TestFieldCacheRangeFilter.cs" />
-    <Compile Include="Search\TestFieldCacheTermsFilter.cs" />
-    <Compile Include="Search\TestFilteredQuery.cs" />
-    <Compile Include="Search\TestFilteredSearch.cs" />
-    <Compile Include="Search\TestFuzzyQuery.cs" />
-    <Compile Include="Search\TestMatchAllDocsQuery.cs" />
-    <Compile Include="Search\TestMultiPhraseQuery.cs" />
-    <Compile Include="Search\TestMultiSearcher.cs" />
-    <Compile Include="Search\TestMultiSearcherRanking.cs" />
-    <Compile Include="Search\TestMultiTermConstantScore.cs" />
-    <Compile Include="Search\TestMultiThreadTermVectors.cs" />
-    <Compile Include="Search\TestMultiValuedNumericRangeQuery.cs" />
-    <Compile Include="Search\TestNot.cs" />
-    <Compile Include="Search\TestNumericRangeQuery32.cs" />
-    <Compile Include="Search\TestNumericRangeQuery64.cs" />
-    <Compile Include="Search\TestParallelMultiSearcher.cs" />
-    <Compile Include="Search\TestPhrasePrefixQuery.cs" />
-    <Compile Include="Search\TestPhraseQuery.cs" />
-    <Compile Include="Search\TestPositionIncrement.cs" />
-    <Compile Include="Search\TestPositiveScoresOnlyCollector.cs" />
-    <Compile Include="Search\TestPrefixFilter.cs" />
-    <Compile Include="Search\TestPrefixInBooleanQuery.cs" />
-    <Compile Include="Search\TestPrefixQuery.cs" />
-    <Compile Include="Search\TestQueryTermVector.cs" />
-    <Compile Include="Search\TestQueryWrapperFilter.cs" />
-    <Compile Include="Search\TestScoreCachingWrappingScorer.cs" />
-    <Compile Include="Search\TestScorerPerf.cs" />
-    <Compile Include="Search\TestSetNorm.cs" />
-    <Compile Include="Search\TestSimilarity.cs" />
-    <Compile Include="Search\TestSimpleExplanations.cs" />
-    <Compile Include="Search\TestSimpleExplanationsOfNonMatches.cs" />
-    <Compile Include="Search\TestSloppyPhraseQuery.cs" />
-    <Compile Include="Search\TestSort.cs" />
-    <Compile Include="Search\TestSpanQueryFilter.cs" />
-    <Compile Include="Search\TestTermRangeFilter.cs" />
-    <Compile Include="Search\TestTermRangeQuery.cs" />
-    <Compile Include="Search\TestTermScorer.cs" />
-    <Compile Include="Search\TestTermVectors.cs" />
-    <Compile Include="Search\TestThreadSafe.cs" />
-    <Compile Include="Search\TestTimeLimitingCollector.cs" />
-    <Compile Include="Search\TestTopDocsCollector.cs" />
-    <Compile Include="Search\TestTopScoreDocCollector.cs" />
-    <Compile Include="Search\TestWildcard.cs" />
-    <Compile Include="Store\MockRAMDirectory.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Store\MockRAMInputStream.cs" />
-    <Compile Include="Store\MockRAMOutputStream.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Store\TestBufferedIndexInput.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Store\TestDirectory.cs" />
-    <Compile Include="Store\TestFileSwitchDirectory.cs" />
-    <Compile Include="Store\TestHugeRamFile.cs" />
-    <Compile Include="Store\TestLock.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Store\TestLockFactory.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Store\TestMultiMMap.cs" />
-    <Compile Include="Store\TestRAMDirectory.cs" />
-    <Compile Include="Store\TestWindowsMMap.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Store\_TestHelper.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="SupportClassException.cs" />
-    <Compile Include="Support\BigObject.cs" />
-    <Compile Include="Support\CollisionTester.cs" />
-    <Compile Include="Support\RandomExtensions.cs" />
-    <Compile Include="Support\TestWeakDictionaryBehavior.cs" />
-    <Compile Include="Support\TestWeakDictionary.cs" />
-    <Compile Include="Support\SmallObject.cs" />
-    <Compile Include="Support\TestCase.cs" />
-    <Compile Include="Support\TestCloseableThreadLocal.cs" />
-    <Compile Include="Support\TestEquatableList.cs" />
-    <Compile Include="Support\TestHashMap.cs" />
-    <Compile Include="Support\TestIDisposable.cs" />
-    <Compile Include="Support\TestLRUCache.cs" />
-    <Compile Include="Support\TestOldPatches.cs" />
-    <Compile Include="Support\TestOSClass.cs" />
-    <Compile Include="Support\TestSerialization.cs" />
-    <Compile Include="Support\TestThreadClass.cs" />
-    <Compile Include="Support\TestWeakDictionaryPerformance.cs" />
-    <Compile Include="TestDemo.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="TestMergeSchedulerExternal.cs" />
-    <Compile Include="TestSearch.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="TestSearchForDuplicates.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Support\TestSupportClass.cs" />
-    <Compile Include="Util\Automaton\TestBasicOperations.cs" />
-    <Compile Include="Util\Automaton\TestCompiledAutomaton.cs" />
-    <Compile Include="Util\Automaton\TestDeterminism.cs" />
-    <Compile Include="Util\Automaton\TestDeterminizeLexicon.cs" />
-    <Compile Include="Util\Automaton\TestLevenshteinAutomata.cs" />
-    <Compile Include="Util\Automaton\TestMinimize.cs" />
-    <Compile Include="Util\Automaton\TestSpecialOperations.cs" />
-    <Compile Include="Util\Automaton\TestUTF32ToUTF8.cs" />
-    <Compile Include="Util\English.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Util\Fst\Test2BFST.cs" />
-    <Compile Include="Util\Fst\TestBytesStore.cs" />
-    <Compile Include="Util\Fst\TestFSTs.cs" />
     <Compile Include="Util\LocalizedTestCase.cs" />
-    <Compile Include="Util\Paths.cs" />
-    <Compile Include="Util\StressRamUsageEstimator.cs" />
-    <Compile Include="Util\Test2BPagedBytes.cs" />
-    <Compile Include="Util\TestArrayUtil.cs" />
-    <Compile Include="Util\TestAttributeSource.cs" />
-    <Compile Include="Util\TestByteBlockPool.cs" />
-    <Compile Include="Util\TestBytesRef.cs" />
-    <Compile Include="Util\TestBytesRefHash.cs" />
-    <Compile Include="Util\TestCharsRef.cs" />
-    <Compile Include="Util\TestCloseableThreadLocal.cs" />
-    <Compile Include="Util\TestCollectionUtil.cs" />
-    <Compile Include="Util\TestDoubleBarrelLRUCache.cs" />
-    <Compile Include="Util\TestFieldCacheSanityChecker.cs" />
-    <Compile Include="Util\TestIndexableBinaryStringTools.cs" />
-    <Compile Include="Util\TestIntsRef.cs" />
-    <Compile Include="Util\TestIOUtils.cs" />
-    <Compile Include="Util\TestMaxFailureRule.cs" />
-    <Compile Include="Util\TestNamedSPILoader.cs" />
-    <Compile Include="Util\TestNumericUtils.cs" />
-    <Compile Include="Util\TestOpenBitSet.cs" />
-    <Compile Include="Util\TestPagedBytes.cs" />
-    <Compile Include="Util\TestPriorityQueue.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Util\TestRamUsageEstimator.cs" />
-    <Compile Include="Util\TestRamUsageEstimatorOnWildAnimals.cs" />
-    <Compile Include="Util\TestRecyclingByteBlockAllocator.cs" />
-    <Compile Include="Util\TestRecyclingIntBlockAllocator.cs" />
-    <Compile Include="Util\TestRollingBuffer.cs" />
-    <Compile Include="Util\TestSentineIntSet.cs" />
-    <Compile Include="Util\TestSetOnce.cs" />
-    <Compile Include="Util\TestSmallFloat.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Util\TestSorterTemplate.cs" />
-    <Compile Include="Util\TestUnicodeUtil.cs" />
-    <Compile Include="Util\TestVersion.cs" />
-    <Compile Include="Util\TestVersionComparator.cs" />
-    <Compile Include="Util\TestVirtualMethod.cs" />
-    <Compile Include="Util\TestWeakIdentityMap.cs" />
-    <Compile Include="Util\_TestUtil.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <None Include="App.config" />
     <None Include="Index\index.19.cfs.zip" />
     <None Include="Index\index.19.nocfs.zip" />
@@ -601,6 +222,7 @@
     <None Include="Index\index.29.cfs.zip" />
     <None Include="Index\index.29.nocfs.zip" />
     <None Include="Lucene.Net.snk" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Messages\MessagesTestBundle.ja.resources">
@@ -647,10 +269,19 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="UpdatedTests.txt" />
+    <Folder Include="Analysis\Tokenattributes\" />
+    <Folder Include="QueryParser\" />
+    <Folder Include="Search\Function\" />
+    <Folder Include="Search\Payloads\" />
+    <Folder Include="Search\Spans\" />
+    <Folder Include="Store\" />
+    <Folder Include="Support\" />
+    <Folder Include="Util\Automaton\" />
+    <Folder Include="Util\Fst\" />
+    <Folder Include="Util\Packed\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Util\Packed\" />
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
