starting to work on porting randomized testing for the test framework.

--- a/test/core/Lucene.Net.Test.csproj
+++ b/test/core/Lucene.Net.Test.csproj
@@ -271,6 +271,7 @@
   <ItemGroup>
     <Folder Include="Analysis\Tokenattributes\" />
     <Folder Include="QueryParser\" />
+    <Folder Include="Randomization\" />
     <Folder Include="Search\Function\" />
     <Folder Include="Search\Payloads\" />
     <Folder Include="Search\Spans\" />
