--- a/test/test-framework/Lucene.Net.TestFramework.csproj
+++ b/test/test-framework/Lucene.Net.TestFramework.csproj
@@ -54,13 +54,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Randomized\Attributes\SeedDecoratorAttribute.cs" />
+    <Compile Include="Randomized\IllegalStateException.cs" />
+    <Compile Include="Randomized\InternalAssumptionViolatedException.cs">
+      <CustomToolNamespace>In</CustomToolNamespace>
+    </Compile>
+    <Compile Include="Randomized\ISeedDecorator.cs" />
+    <Compile Include="Randomized\MurmurHash3.cs" />
+    <Compile Include="Randomized\RandomizedContext.cs" />
+    <Compile Include="Randomized\RandomizedRunner.cs" />
+    <Compile Include="Randomized\Randomness.cs" />
+    <Compile Include="Randomized\SingleThreadedRandom.cs" />
+    <Compile Include="Randomized\ThreadGroup.cs" />
     <Compile Include="Support\RandomizedTest.cs" />
     <Compile Include="Support\SystemProperties.cs" />
     <Compile Include="Util\Attributes.cs" />
     <Compile Include="Util\LuceneTestCase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Util\TestCase.cs" />
-    <Compile Include="Util\TestFixture2.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\core\Lucene.Net.csproj">
@@ -70,7 +80,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Analysis\" />
-    <Folder Include="Randomization\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Lucene.Net.snk" />
