--- a/src/contrib/Spatial/Contrib.Spatial.NTS.csproj
+++ b/src/contrib/Spatial/Contrib.Spatial.NTS.csproj
@@ -128,16 +128,21 @@
     <Compile Include="BBox\BBoxSimilarityValueSource.cs" />
     <Compile Include="BBox\BBoxStrategy.cs" />
     <Compile Include="BBox\DistanceSimilarity.cs" />
+    <Compile Include="DisjointSpatialFilter.cs" />
+    <Compile Include="Prefix\AbstractPrefixTreeFilter.cs" />
+    <Compile Include="Prefix\AbstractVisitingPrefixTreeFilter.cs" />
+    <Compile Include="Prefix\ContainsPrefixTreeFilter.cs" />
+    <Compile Include="Prefix\IntersectsPrefixTreeFilter.cs" />
     <Compile Include="Prefix\PointPrefixTreeFieldCacheProvider.cs" />
     <Compile Include="Prefix\PrefixTreeStrategy.cs" />
-    <Compile Include="Prefix\RecursivePrefixTreeFilter.cs" />
     <Compile Include="Prefix\RecursivePrefixTreeStrategy.cs" />
     <Compile Include="Prefix\TermQueryPrefixTreeStrategy.cs" />
+    <Compile Include="Prefix\Tree\Cell.cs" />
     <Compile Include="Prefix\Tree\GeohashPrefixTree.cs" />
-    <Compile Include="Prefix\Tree\Node.cs" />
     <Compile Include="Prefix\Tree\QuadPrefixTree.cs" />
     <Compile Include="Prefix\Tree\SpatialPrefixTree.cs" />
     <Compile Include="Prefix\Tree\SpatialPrefixTreeFactory.cs" />
+    <Compile Include="Prefix\WithinPrefixTreeFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\SpatialArgs.cs" />
     <Compile Include="Queries\SpatialArgsParser.cs" />
@@ -153,7 +158,6 @@
     <Compile Include="Util\FunctionQuery.cs" />
     <Compile Include="Util\ShapeFieldCache.cs" />
     <Compile Include="Util\ShapeFieldCacheProvider.cs" />
-    <Compile Include="Util\TermsEnumCompatibility.cs" />
     <Compile Include="Util\TermsFilter.cs" />
     <Compile Include="Util\ValueSourceFilter.cs" />
     <Compile Include="Vector\DistanceValueSource.cs" />
@@ -163,6 +167,10 @@
     <ProjectReference Include="..\..\core\Lucene.Net.csproj">
       <Project>{5D4AD9BE-1FFB-41AB-9943-25737971BF57}</Project>
       <Name>Lucene.Net</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Queries\Contrib.Queries.csproj">
+      <Project>{481CF6E3-52AF-4621-9DEB-022122079AF6}</Project>
+      <Name>Contrib.Queries</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
