Fixed Document enum

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# This is the git pattern ignore file for the project.
+# this is the git pattern ignore file for the project.
 # Git can be used with svn http://code.google.com/p/msysgit/
 bin
 Bin
@@ -15,4 +15,3 @@ build/artifacts
 build/bin
 _ReSharper*
 *.orig
-packages/
