--- a/Lucene.Net.csproj
+++ b/Lucene.Net.csproj
@@ -9631,6 +9631,7 @@
     <Compile Include="src\core\Support\BuildType.cs" />
     <Compile Include="src\core\Support\Character.cs" />
     <Compile Include="src\core\Support\Arrays.cs" />
+    <Compile Include="src\core\Support\IdentityHashSet.cs" />
     <Compile Include="src\core\Support\ListExtensions.cs" />
     <Compile Include="src\core\Support\UnmodifiableDictionary.cs" />
     <Compile Include="src\core\Support\CloseableThreadLocalProfiler.cs" />
