--- a/Lucene.Net.csproj
+++ b/Lucene.Net.csproj
@@ -9582,7 +9582,6 @@
     <Compile Include="src\core\Store\BufferedIndexOutput.cs" />
     <Compile Include="src\core\Store\ByteArrayDataInput.cs" />
     <Compile Include="src\core\Store\ByteArrayDataOutput.cs" />
-    <Compile Include="src\core\Store\ByteBuffer.cs" />
     <Compile Include="src\core\Store\ByteBufferIndexInput.cs" />
     <Compile Include="src\core\Store\ChecksumIndexInput.cs" />
     <Compile Include="src\core\Store\CompoundFileDirectory.cs" />
@@ -9627,15 +9626,25 @@
     <Compile Include="src\core\Store\VerifyingLockFactory.cs" />
     <Compile Include="src\core\StringHelperClass.cs" />
     <Compile Include="src\core\Support\AppSettings.cs" />
+    <Compile Include="src\core\Support\AtomicBoolean.cs" />
+    <Compile Include="src\core\Support\AtomicInteger.cs" />
+    <Compile Include="src\core\Support\AtomicLong.cs" />
     <Compile Include="src\core\Support\AttributeImplItem.cs" />
     <Compile Include="src\core\Support\BitSetSupport.cs" />
+    <Compile Include="src\core\Support\Buffer.cs" />
+    <Compile Include="src\core\Support\BufferUnderflowException.cs" />
     <Compile Include="src\core\Support\BuildType.cs" />
+    <Compile Include="src\core\Support\ByteBuffer.cs" />
     <Compile Include="src\core\Support\Character.cs" />
     <Compile Include="src\core\Support\Arrays.cs" />
+    <Compile Include="src\core\Support\FileStreamExtensions.cs" />
     <Compile Include="src\core\Support\ICharSequence.cs" />
+    <Compile Include="src\core\Support\IdentityComparer.cs" />
+    <Compile Include="src\core\Support\IdentityHashMap.cs" />
     <Compile Include="src\core\Support\IdentityHashSet.cs" />
     <Compile Include="src\core\Support\ListExtensions.cs" />
     <Compile Include="src\core\Support\MathExtension.cs" />
+    <Compile Include="src\core\Support\StringBuilderExtensions.cs" />
     <Compile Include="src\core\Support\StringTokenizer.cs" />
     <Compile Include="src\core\Support\ThreadFactory.cs" />
     <Compile Include="src\core\Support\UnmodifiableDictionary.cs" />
