Analysis, Codecs Frameworks are error free. Analysis, Codecs and Docuents are all error free and labeld with the exception of Documents.TestDateTools

--- a/Lucene.Net.csproj
+++ b/Lucene.Net.csproj
@@ -9568,6 +9568,7 @@
     <Compile Include="src\core\Support\ReentrantLock.cs" />
     <Compile Include="src\core\Support\StringBuilderExtensions.cs" />
     <Compile Include="src\core\Support\StringCharSequenceWrapper.cs" />
+    <Compile Include="src\core\Support\StringSupport.cs" />
     <Compile Include="src\core\Support\StringTokenizer.cs" />
     <Compile Include="src\core\Support\TaskSchedulerCompletionService.cs" />
     <Compile Include="src\core\Support\ThreadFactory.cs" />
